--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,12 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "rootDir": "src",
-    "target": "ESNext"
+    "target": "ESNext",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src/**/*"
